# Introduzione-a-Docker

./: .gitignore  01_analytics_be_compose.yml  02_analytics_fe_compose.yml  04_application_fe_compose.yml  README.md  kafka_full_compose.yml  port_assignment.txt  requirements.txt
scripts/: install-docker.sh  install_docker.sh
scripts/demo_1/: back-end.yml  back-end_1.yml  cmd  cmd.sh  create_table.sql  daemon.json  dashboard.json  load_data_into_db.sh  mysql_with_data  todo
scripts/demo_1/compose/: mysql.yml  ui.yml
scripts/demo_1/mysql_with_data/: Dockerfile  create_table.sql  load_data_into_db.sh
scripts/demo_2/: back-end_2.yml
scripts/demo_3/: back-end_3.yml  webapp_docker
scripts/demo_3/my_app/: Dockerfile
scripts/demo_3/my_base/: Dockerfile
scripts/demo_3/my_base_py/: Dockerfile
serata1/: .env  .flake8  01_analytics_be_compose.yml  02_analytics_fe_compose.yml  03_application_be_compose.yml  pyproject.toml  requirements.txt
serata1/scripts/: docker-commands.sh  install_docker.sh  orphan-container-rm.sh
serata1/scripts/demo_1/: cmd.sh
serata1/scripts/demo_1/compose/: mysql.yml
serata1/webapp/: Dockerfile  requirements.txt
serata1/webapp/src/: launch.py
serata1/webapp/src/common/: config.py  logger.py  mssqldb.py  mysqldb.py  redis.py  utils.py
webapp/: main.py
webapp/src/common/: utils.py
